--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 **source.swf
 /**source.swf
 **Founder.swf
+Conf_v/bin-debug/history/history.css
+Conf_v/bin-debug/history/history.js
+Conf_v/bin-debug/history/historyFrame.html
+Conf_v/bin-debug/swfobject.js
