ignore the files .js, html, css

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@
 **source.swf
 /**source.swf
 **Founder.swf
-Conf_v/bin-debug/history/history.css
-Conf_v/bin-debug/history/history.js
-Conf_v/bin-debug/history/historyFrame.html
-Conf_v/bin-debug/swfobject.js
+**history.css
+**history.js
+**swfobject.js
+***.js
+***.html
+***.css
